styles/personalData.css
/* configuração da caixa de informações pessoais */
.personalData {
  display: flex;
  margin: 5vh 0 3vh 3vw;
  left: 0;
  background: rgb(155, 154, 154);
  padding: 2vh 2vw 2vh 2vw;
  border-top: 1rem solid black;
  border-radius: 2rem;
  width: 20vw;
  height: 84vh;
}

.personalData div {
  /* border: 1px solid wheat; */
  flex: 1;
}

.personalData.active {
  width: 40vw;
}

.personalData #data img {
  width: 16vw;
  margin-bottom: 2vh;
  border-radius: 8px;
}

.personalData #data h2 {
  /* border: 1px solid black; */
  color: black;
  font-weight: 500;
  font-size: 1.3vw;
  width: 16vw;
}

.personalData #data h3 {
  /* border: 1px solid black; */
  font-weight: 300;
  font-size: 1vw;
  width: 12vw;
}

.personalData #resume {
  display: none;
}

.personalData #resume.active {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  text-overflow: clip;
}

.personalData #resume.active h3 {
  margin: 0 auto 0 auto;
  font-weight: 500;
  font-size: 1.3vw;
  width: 16vw;
  color: black;
}

.personalData #resume.active p {
  margin: 0 auto 0 auto;
  font-weight: 300;
  font-size: 1vw;
  width: 12vw;
  color: black;

}

.personalData #resume.active p + h3{
  margin-top: 8vh;
}



.personalData #span {

  display: flex;
  flex-direction: column;
  justify-content: center;
  /* border: 1px solid white; */
  position: absolute;
  height: 60vh;
  width: 20vw;
  top: 0;
  left: 0;
  margin: 5vh 0 3vh 3vw;
  height: 84vh;
}

.personalData #span.active {
  width: 40vw;
}


.personalData #span span {
  /* border: 1px solid red; */
  display: flex;
  align-self: flex-end;
  background: url("../assets/open.svg") no-repeat;
  background-position: right;
  width: 50px;
  height: 50px;
  cursor: pointer;
  margin-right: -30px;

}

.personalData #span.active span {
  display: flex;
  background: url("../assets/close.svg") no-repeat;
  width: 50px;
  height: 50px;
  margin-right: -35px;
  cursor: pointer;
  z-index: 5000;
}

